// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnvironmentBadge renders a specific label if given 1`] = `
<DocumentFragment>
  <div
    class="environment-badge"
  >
    foo
  </div>
</DocumentFragment>
`;

exports[`EnvironmentBadge renders correctly in development environment 1`] = `
<DocumentFragment>
  <div
    class="environment-badge environment-label-development"
  >
    Dev
  </div>
</DocumentFragment>
`;

exports[`EnvironmentBadge renders correctly in sandbox environment 1`] = `
<DocumentFragment>
  <div
    class="environment-badge environment-label-sandbox"
  >
    Sandbox
  </div>
</DocumentFragment>
`;

exports[`EnvironmentBadge renders correctly in staging environment 1`] = `
<DocumentFragment>
  <div
    class="environment-badge environment-label-staging"
  >
    Staging
  </div>
</DocumentFragment>
`;
